# extract-pdf-images

./: .breakpoints  main.py  pyproject.toml
images/: image_1.jp2  image_2.jp2  image_6.jp2
static/: package-lock.json  package.json
static/css/: main.css
templates/: base.html  index.html
