[tool.poetry]
name = "extract-images-from-pdf"
version = "1.0.0"
description = "Quickly and easily extract all images from a PDF file"
authors = ["Dermot Fitzpatrick"]

[tool.poetry.dependencies]
python = "^3.8"
pikepdf = "^4.0.1"
Flask = "^2.0.2"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
